# src/main/java/com/proctor/service/course/entity/Course.java
@@ -1,6 +1,5 @@
 package com.proctor.service.course.entity;
 
-import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
@@ -8,27 +7,22 @@ import org.springframework.data.annotation.Id;
 import org.springframework.data.relational.core.mapping.Column;
 import org.springframework.data.relational.core.mapping.Table;
 
-import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.util.UUID;
 
-@Table(name = "Courses")
 @Getter
 @Setter
-@AllArgsConstructor
 @NoArgsConstructor
+@Table(name = "Courses")
 public class Course {
 
     @Id
     @Column("course_id")
-    private String courseId;
-
+    private UUID courseId;
     @Column("course_name")
-    private String courseName;  // Course Name
-
+    private String courseName;
     @Column("created_at")
-    private LocalDateTime createdAt;  // Course Creation Timestamp
-
+    private OffsetDateTime createdAt;
     @Column("faculty_id")
-    private Long facultyId;  // Faculty assigned to the course
-
-
+    private Long facultyId;
 }
